--- a/index.html
+++ b/index.html
@@ -12,20 +12,26 @@
     <section id="datasection">
     </section>
     <section id="bottomnavbar">
-        <button  class="btn1" id="Button1">Yeniden Sırala</button>  
-        <input id="rangeinput" type="range"  min=10 max=120 step=1 value=60>
-        <input id="speed" type="range"  min=1 max=5 step=1 value=4>
+         <div class="rangebox">
+            <span class="rangetitle">Çubuk Sayısı</span>
+            <span>Sıralama Hızı</span>
+            <input id="rangeinput" type="range"  min=10 max=120 step=1 value=60>
+            <input id="speed" type="range"  min=1 max=5 step=1 value=4>
+         </div>
+        <button  class="btn1" id="Button1">Yeniden Sırala</button> 
         <div class="buttons">
             <button onclick="bubble()">Bubble Sort</button>
-            <button onclick="selection">Selection Sort</button>
-            <button onclick="instertion">Insertion Sort</button>
-            <button onclick="merge">Merge Sort</button>
-            <button onclick="quick">Quick Sort</button>
-            <button onclick="heap">Heap Sort</button>
+            <button onclick="selection()">Selection Sort</button>
+            <button onclick="instertion()">Insertion Sort</button>
+            <button onclick="merge()">Merge Sort</button>
+            <button onclick="quick()">Quick Sort</button>
+            <button onclick="heap()">Heap Sort</button>
         </div>
     </section>
     <script src="app/components/button.js"></script>  
     <script src="app/components/visualize.js"></script>  
     <script src="app/algorithms/bubblesort.js"></script>  
+    <script src="app/algorithms/selectionsort.js"></script>  
+    <script src="app/algorithms/mergesort.js"></script>  
 </body>
 </html>
