heap sort added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button onclick="instertion()">Insertion Sort</button>
             <button onclick="merge()">Merge Sort</button>
             <button onclick="quick()">Quick Sort</button>
-            <button onclick="heap()">Heap Sort</button>
+            <button onclick="heapSort()">Heap Sort</button>
         </div>
     </section>
     <script src="app/components/button.js"></script>  
@@ -33,5 +33,6 @@
     <script src="app/algorithms/bubblesort.js"></script>  
     <script src="app/algorithms/selectionsort.js"></script>  
     <script src="app/algorithms/mergesort.js"></script>  
+    <script src="app/algorithms/heapsort.js"></script>  
 </body>
 </html>
