insertion sort added

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
          <div class="rangebox">
             <span class="rangetitle">Çubuk Sayısı</span>
             <span>Sıralama Hızı</span>
-            <input id="rangeinput" type="range"  min=10 max=120 step=1 value=60>
+            <input id="rangeinput" type="range"  min=10 max=200 step=1 value=60>
             <input id="speed" type="range"  min=1 max=5 step=1 value=4>
          </div>
         <button  class="btn1" id="Button1">Yeniden Sırala</button> 
         <div class="buttons">
             <button onclick="bubble()">Bubble Sort</button>
             <button onclick="selection()">Selection Sort</button>
-            <button onclick="instertion()">Insertion Sort</button>
+            <button onclick="insertion()">Insertion Sort</button>
             <button onclick="merge()">Merge Sort</button>
             <button onclick="quick()">Quick Sort</button>
             <button onclick="heapSort()">Heap Sort</button>
@@ -32,7 +32,7 @@
     <script src="app/components/visualize.js"></script>  
     <script src="app/algorithms/bubblesort.js"></script>  
     <script src="app/algorithms/selectionsort.js"></script>  
-    <script src="app/algorithms/mergesort.js"></script>  
     <script src="app/algorithms/heapsort.js"></script>  
+    <script src="app/algorithms/insertionsort.js"></script>  
 </body>
 </html>
