--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
     <script src="app/algorithms/selectionsort.js"></script>  
     <script src="app/algorithms/heapsort.js"></script>  
     <script src="app/algorithms/insertionsort.js"></script>  
+    <script src="app/algorithms/quicksort.js"></script>  
 </body>
 </html>
